# scrutiny

./: .gitignore  CHANGELOG.md  Cargo.toml  release-plz.toml
.github/workflows/: release-plz-tag.yml  release-plz.yml
src/: main.rs
