# This is free and unencumbered software released into the public domain.

[package]
name = "scruitny"
version = "0.1.6"
edition = "2021"
homepage = "https://github.com/code-sleuth/scrutiny"
repository = "https://github.com/code-sleuth/scrutiny"
license = "Unlicense"
authors = ["Ibrahim Mbaziira <code.ibra@gmail.com>"]
description = "my crate"
readme = "README.md"
categories = ["development-tools::testing"]

[dependencies]
